# caltools

./: .gitignore  LICENSE  README.md  __init__.py  _types.py  dark.py  flat.py  gain.py  io.py  linearity.py  noise.py  plotting.py  prnu.py  pyproject.toml  stacking.py  stats.py
caltools/: __init__.py  _types.py  dark.py  gain.py  io.py  linearity.py  noise.py  plotting.py  prnu.py  stacking.py  stats.py
